@@ -29,13 +29,15 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.logging.log4j.Logger; import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.goobi.beans.DatabaseObject;
 import org.goobi.beans.Institution;
 
 import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.exceptions.DAOException;
 import de.sub.goobi.persistence.managers.IManager;
+import lombok.Getter;
 
 public class DatabasePaginator implements Serializable {
     private static final long serialVersionUID = 1571881092118205104L;
@@ -43,14 +45,15 @@ public class DatabasePaginator implements Serializable {
     private List<? extends DatabaseObject> results;
     private int pageSize = 10;
     private int page = 0;
+    @Getter
     private int totalResults = 0;
     private String order = "";
     private String filter = new String();
     private IManager manager;
     private String returnPage;
-    private List<Integer> idList;
-    private Institution institution;
 
+    private List<Integer> idList = new ArrayList<>();
+    private Institution institution;
 
     public DatabasePaginator(String order, String filter, IManager manager, String returnPage) {
         LoginBean login = Helper.getLoginBean();
@@ -68,7 +71,7 @@ public class DatabasePaginator implements Serializable {
         this.manager = manager;
         try {
             totalResults = manager.getHitSize(order, filter, institution);
-            idList = manager.getIdList(order, filter, institution);
+
             load();
         } catch (DAOException e) {
             logger.error("Failed to count results", e);
@@ -77,7 +80,7 @@ public class DatabasePaginator implements Serializable {
     }
 
     public int getLastPageNumber() {
-        int ret = new Double(Math.floor(this.totalResults / this.pageSize)).intValue();
+        int ret = Double.valueOf(Math.floor(this.totalResults / this.pageSize)).intValue();
         if (this.totalResults % this.pageSize == 0) {
             ret--;
         }
@@ -87,10 +90,6 @@ public class DatabasePaginator implements Serializable {
     // public List<? extends DatabaseObject> getList() {
     // return hasNextPage() ? this.results.subList(0, this.pageSize) : this.results;
     // }
-
-    public int getTotalResults() {
-        return this.totalResults;
-    }
 
     public int getFirstResultNumber() {
         return this.page * this.pageSize + 1;
@@ -115,12 +114,16 @@ public class DatabasePaginator implements Serializable {
     // }
 
     public List<? extends DatabaseObject> getList() {
-        return results;
+        return this.results;
+    }
+
+    public void setList(List<? extends DatabaseObject> results) {
+        this.results = results;
     }
 
     public void load() {
         try {
-            results = manager.getList(order, filter, this.page * this.pageSize, pageSize, institution);
+            this.results = manager.getList(order, filter, this.page * this.pageSize, pageSize, institution);
             for (DatabaseObject d : results) {
                 d.lazyLoad();
             }
@@ -216,7 +219,9 @@ public class DatabasePaginator implements Serializable {
     }
 
     public List<Integer> getIdList() {
+        if (idList.isEmpty()) {
+            idList = manager.getIdList(order, filter, institution);
+        }
         return idList;
     }
-
 }
